--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,49 @@
-*.log
-wp-config.php
-wp-content/advanced-cache.php
-wp-content/backup-db/
-wp-content/backups/
-wp-content/blogs.dir/
-wp-content/cache/
-wp-content/upgrade/
-wp-content/uploads/
-wp-content/wp-cache-config.php
-wp-content/plugins/hello.php
+# Ignore system files and typical project files
+*~
+.DS_Store
+.svn
+.cvs
+*.bak
+*.swp
+Thumbs.db
 
-/.htaccess
-/license.txt
-/readme.html
-/sitemap.xml
-/sitemap.xml.gz
+# Sublime Text
+*.sublime-workspace
 
+# PHPStorm
+*.idea
+
+# Ignore everything in the root except the "wp-content" directory.
+/*
+!.gitignore
+!wp-content/
+
+# Ignore everything in the "wp-content" directory, except the "plugins" and "themes" directories.
+wp-content/*
+!wp-content/plugins/
+!wp-content/themes/
+
+# Ignore everything in the "plugins" directory, except the plugins you specify
+wp-content/plugins/*
+# !wp-content/plugins/my-single-file-plugin.php
+!wp-content/plugins/socrata-case-studies/
+!wp-content/plugins/socrata-image-attribution/
+!wp-content/plugins/socrata-stories/
+!wp-content/plugins/socrata-tech-blog/
+!wp-content/plugins/socrata-open-data-field-guide/
+!wp-content/plugins/socrata-open-performance-guide/
+!wp-content/plugins/socrata-newsroom/
+!wp-content/plugins/socrata-events/
+!wp-content/plugins/socrata-videos/
+!wp-content/plugins/socrata-downloads/
+!wp-content/plugins/socrata-open-data-directory/
+!wp-content/plugins/socrata-webinars/
+!wp-content/plugins/socrata-content-discovery/
+!wp-content/plugins/socrata-leadership/
+!wp-content/plugins/socrata-banners/
+!wp-content/plugins/socrata-hide-post/
+
+# Ignore everything in the "themes" directory, except the themes you specify
+wp-content/themes/*
+!wp-content/themes/sage/
+!wp-content/themes/sage-8.4.2/
