--- a/wp-content/themes/miro/bower.json
+++ b/wp-content/themes/miro/bower.json
@@ -7,7 +7,22 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "bootstrap": "git://github.com/twbs/bootstrap.git#v4.0.0-beta",
-    "popper.js": "^1.12.3"
+    "popper.js": "^1.12.9",
+    "matchHeight": "^0.7.2",
+    "iframe-resizer": "^3.5.16",
+    "slick-carousel": "^1.8.1",
+    "material-design-color-palette": "^1.1.0",
+    "include-media": "^1.4.9"
+  },  
+  "overrides": {
+    "iframe-resizer": {
+      "main": "./js/iframeResizer.min.js"
+    },
+    "slick-carousel": {
+      "main": "./slick/slick.min.js"
+    },
+    "matchHeight": {
+      "main": "./dist/jquery.matchHeight-min.js"
+    }
   }
 }
