--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,8 @@ wp-content/plugins/*
 !wp-content/plugins/socrata-image-attribution/
 !wp-content/plugins/socrata-open-data-field-guide/
 !wp-content/plugins/socrata-open-performance-guide/
-!wp-content/plugins/socrata-newsroom/
 !wp-content/plugins/socrata-events/
+!wp-content/plugins/socrata-newsroom/
 !wp-content/plugins/socrata-videos/
 !wp-content/plugins/socrata-downloads/
 !wp-content/plugins/socrata-webinars/
@@ -39,7 +39,10 @@ wp-content/plugins/*
 !wp-content/plugins/socrata-leadership/
 !wp-content/plugins/socrata-banners/
 !wp-content/plugins/socrata-hide-post/
+!wp-content/plugins/socrata-customer-logos/
+!wp-content/plugins/socrata-media-kit/
+!wp-content/plugins/socrata-homepage-feature/
 
 # Ignore everything in the "themes" directory, except the themes you specify
 wp-content/themes/*
-!wp-content/themes/miro/
+!wp-content/themes/miro
