--- a/wp-content/themes/miro/package.json
+++ b/wp-content/themes/miro/package.json
@@ -56,6 +56,7 @@
     "wiredep": "^4.0.0"
   },
   "dependencies": {
+    "body-scroll-lock": "^2.2.0",
     "bootstrap": "^4.0.0",
     "mdbootstrap": "^4.4.3"
   }
